# llm-text-evaluation-framework

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  createrelease.sh  docker-compose.yml  llm_evaluations.db  main.py  pyproject.toml  samples.md
ai/: evaluator.py  evaluator_utils.py
components/: evaluation_result.py  sidebar.py
core/: config.py  database.py
models/: enums.py  models.py
pages/: 1_history.py
repositories/: evaluation.py
