[project]
name = "llm-text-evaluation-framework"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.9.1",
    "sentence-transformers>=5.1.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.48.0",
    "textstat>=0.7.8",
    "plotly>=5.0.0",
    "pandas>=1.5.0",
]
